<resources>
    <string name="app_name">Dead man\'s switch</string>
    <string name="fab_run_switch">\trun switch</string>
    <string name="buy_premium">get premium</string>
    <string name="buy_premium_description">Dark mode, sounds, emergency alert</string>
    <string name="premium">Premium</string>
    <string name="time_range">Time range (in seconds)</string>
    <string name="max">max</string>
    <string name="min">min</string>
    <string name="calibrate">calibrate</string>
    <string name="proximity_sensor">Proximity sensor</string>
    <string name="alarm_loudness">Volume</string>
    <string name="test_alarm">Test alarm</string>
    <string name="night_mode">Night mode</string>
    <string name="turn_on">turn on</string>
    <string name="alarm_sounds">Alarm sound</string>
    <string name="choose">choose</string>
    <string name="sound_list">Sound list</string>
    <string name="bell">bell</string>
    <string name="emergency_sms_message">Emergency SMS message</string>
    <string name="save">save</string>
    <string name="current_alarm">Damaged Bell</string>
    <string name="set_emergency_contact">Set emergency contact</string>
    <string name="emergency_description">This person will get sms message if your inactivity will be longer then selected timeout</string>
    <string name="message">MESSAGE</string>
    <string name="default_emergency_message">Hi, It\'s John. I\'m probably in trouble now - it\'s emergency alert from \"Keep Driver Awake\". Please try to reach me to verify that I could respond now.</string>
    <string name="contact_number">CONTACT NUMBER</string>
    <string name="example_phone_number">111222333444555</string>
    <string name="timeout">TIMEOUT IN SECONDS</string>
    <string name="default_emergency_timeout">90</string>
    <string name="tick_image">tick image</string>
    <string name="purchase_for_pln_13_39">Purchase for PLN 13.39</string>
    <string name="example_full_contact">Anna (+48 111222333)</string>
    <string name="message_label">Message:</string>
    <string name="edit">edit</string>
    <string name="buy_premium_and_get_awesome_features">Buy Premium and get awesome features!</string>
    <string name="start_free_7_day_trial">Start free 7-day trial</string>
    <string name="no_thanks">no thanks</string>
    <string name="random_ringtone">random ringtone</string>
    <string name="premium_features_list_button">Premium features list button</string>
    <string name="turn_off">Turn off</string>
    <string name="repeat">Repeat</string>
    <string name="contact_name">CONTACT NAME</string>
    <string name="sample_contact_name">John Smith</string>
    <string name="closing">closing..</string>
    <string name="seek_bar_color">#555555</string>
    <string name="custom_ringtone">Custom ringtone</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="run_switch">Run Switch</string>
    <string name="add_widget_description">You could speed up running alarm by placing widget on your home screen</string>
    <string name="add_widget_label">Add widget to home screen</string>
    <string name="hide_this_hint">Dismiss this hint</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="day_mode">Day mode</string>
    <string name="channel_description">DMS Channel</string>
    <string name="cancle_alarm_notification_title">Cancel Dead Man\'s Switch alarm</string>
    <string name="alarm_canceled_snackbar_message">Alarm canceled</string>
    <string name="hide_widget_popup_description">This hint will disappear forever.</string>
    <string name="hide_widget_popup_title">Are you sure?</string>
    <string name="feature_no_ads">No ads</string>
    <string name="feature_custom_alarms">Custom alarm sounds</string>
    <string name="feature_emergency_sms">Emergency sms (experimental)</string>
    <string name="feature_dark_mode">Dark mode</string>
    <string name="feature_widget">Widget</string>
    <string name="restore_purchased_items">restore purchased items</string>
    <string name="number">Number:</string>
    <string name="contact">Contact:</string>
    <string name="timeout_label">Timeout:</string>
    <string name="ad">Ad</string>
    <string name="no_permission">Can\'t access without permission. You could grant them in your phone settings</string>
    <string name="no_ringtone_picker">No system ringtone picker</string>
</resources>